--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
     <link rel="stylesheet" href="/css/main.css" />
-    <title>Recetario.com</title>
+    <title>Error 404</title>
   </head>
   <body>
     <script src="/js/app.js"></script>
